--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        header
+    </header>
+
+    <footer>
+        footer
+    </footer>
     
 </body>
 </html>
