--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <header>
         header
     </header>
-
+    <div class="gallery">
+        <img src="img1.jpt" alt="">
+        <img src="img2.jpt" alt="">
+        <img src="img3.jpt" alt="">
+    </div>
     <footer>
         footer
     </footer>
